--- a/estilo/style.css
+++ b/estilo/style.css
@@ -69,7 +69,8 @@ header p {
     max-width: 500px;
     margin: auto;
     font-size: 1.2em;
-    text-shadow: -1px 2px 2px black;;
+    text-shadow: -1px 2px 2px black;
+    padding-bottom: 52px;
 }
 
 nav {
